chore: organizando el css del panel de servicios para leer parametros
